# djangotutorial

./: .gitignore  db.sqlite3  pyproject.toml
mysite/: celery.py  settings.py  urls.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
