[tool.poetry]
name = "djangotutorial"
version = "0.1.0"
description = ""
authors = ["zhengwupal <zhengwupal@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
redis = "^5.2.0"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
